--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=3000
-PG_HOST=localhost
-PG_PORT=5432
-PG_DATABASE=codefusion_db
-PG_USER=postgres
+PORT = 3003
+PG_HOST = localhost
+PG_PORT = 5432
+PG_DATABASE = codefusion_db
+PG_USER = postgres
