--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg-promise": "^11.5.3"
+  },
+  "scripts": {
+    "start": "nodemon server.js",
+    "dev": "nodemon server.js",
+    "db:init": "psql -f db/schema.sql",
+    "db:seed": "psql -f db/seed.sql"
   }
 }
