--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.10.1",
+    "passport": "^0.6.0",
     "pg-promise": "^11.5.3"
   },
   "scripts": {
