--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PG_HOST = localhost
 PG_PORT = 5432
 PG_DATABASE = codefusion_db
 PG_USER = postgres
+ELEPHANTSQL_URL= postgres://xcgqyerb:NLp81uaUIuUO4kVns1q6abcKJre-yYsn@peanut.db.elephantsql.com/xcgqyerb
