backend validator typo fix as well as env file

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PG_PORT = 5432
 PG_DATABASE = codefusion_db
 PG_USER = postgres
 ELEPHANTSQL_URL= postgres://xcgqyerb:NLp81uaUIuUO4kVns1q6abcKJre-yYsn@peanut.db.elephantsql.com/xcgqyerb
+ELEPHANT_USER= xcgqyerb
+ELEPHANT_PASS= NLp81uaUIuUO4kVns1q6abcKJre-yYsn
