--- a/.env
+++ b/.env
@@ -3,4 +3,6 @@ PG_HOST = localhost
 PG_PORT = 5432
 PG_DATABASE = codefusion_db
 PG_USER = postgres
-ELEPHANTSQL_URL= postgres://xcgqyerb:NLp81uaUIuUO4kVns1q6abcKJre-yYsn@peanut.db.elephantsql.com/xcgqyerb
+ELEPHANTSQL_URL= postgres://sghjqrly:TLJ_uwYVkHcc29xgKnX6_OrlvHgYU64_@peanut.db.elephantsql.com/sghjqrly
+ELEPHANT_USER= sghjqrly
+ELEPHANT_PASS= TLJ_uwYVkHcc29xgKnX6_OrlvHgYU64_
