--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ PG_HOST = localhost
 PG_PORT = 5432
 PG_DATABASE = codefusion_db
 PG_USER = postgres
-ELEPHANTSQL_URL= postgres://sghjqrly:TLJ_uwYVkHcc29xgKnX6_OrlvHgYU64_@peanut.db.elephantsql.com/sghjqrly
-ELEPHANT_USER= sghjqrly
-ELEPHANT_PASS= TLJ_uwYVkHcc29xgKnX6_OrlvHgYU64_
+ELEPHANTSQL_URL= postgres://wpqemscp:VNoEpfPNxPk0xg5fm61cc0SDr4OwcKjo@peanut.db.elephantsql.com/wpqemscp 
+ELEPHANT_USER= wpqemscp
+ELEPHANT_PASS= VNoEpfPNxPk0xg5fm61cc0SDr4OwcKjo 
